Fix bugs in cart